--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -95,17 +95,17 @@
           <div class="toast-body">
             <b>Was möchten sie melden?</b>
             <br>
-            <select id="select1" class="form-control" onchange="Selection();">
-              <option selected value="None">--</option>
-              <option value="voc">Vokabel</option>
-              <option value="task">Aufgabe</option>
-            </select>
             <form action="/report" id="report-body" method="POST">
+              <select name="type" id="select1" class="form-control" onchange="Selection();">
+                <option selected value="None">--</option>
+                <option value="voc">Vokabel</option>
+                <option value="task">Aufgabe</option>
+              </select>
               <div id="option1" style="display: none;">
                 <b>Welche Vokabel möchten sie melden?</b>
                 <input class="form-control" type="text" name="voc" placeholder="Voc" autocomplete="off" id="voc"></input>
                 <b>Warum möchten sie diese Vokabel melden?</b>
-                <select class="form-control" name="reason">
+                <select class="form-control" name="reason_voc">
                   <option value="None">--</option>
                   <option value="translation_incorrect">Enthält false Übersetzungen.</option>
                   <option value="javascript_included">Enthält Javascript</option>
@@ -119,7 +119,7 @@
                 <b>Welche Aufgabe möchten sie melden?</b>
                 <input class="form-control" type="text" name="task" placeholder="Aufgabe" autocomplete="off" id="task"></input>
                 <b>Warum möchten sie diese Aufgabe melden?</b>
-                <select class="form-control" name="reason">
+                <select class="form-control" name="reason_task">
                   <option value="None">--</option>
                   <option value="content_notAllowed">Enthält rassistische, sexistische oder terroristische Inhalte</option>
                   <option value="javascript_included">Enthält Javascript</option>
